--- a/9_new_year_countdown/style.css
+++ b/9_new_year_countdown/style.css
@@ -1,17 +1,17 @@
-@import url('https://fonts.googleapis.com/css?family=Lato&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Audiowide&display=swap');;
 
 * {
   box-sizing: border-box;
 }
 
 body {
-  background-image: url('https://images.unsplash.com/photo-1467810563316-b5476525c0f9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1349&q=80');
+  background-image: url('https://images.unsplash.com/photo-1450849608880-6f787542c88a?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=966&q=80');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
   height: 100vh;
   color: #fff;
-  font-family: 'Lato', sans-serif;
+  font-family: 'Audiowide', cursive;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -29,7 +29,7 @@ body::after {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.6);
 }
 
 body * {
@@ -42,8 +42,8 @@ h1 {
 }
 
 .countdown {
-  /* display: flex; */
-  display: none;
+  display: flex;
+  /* display: none; */
   transform: scale(2);
 }
 
