--- a/9_new_year_countdown/style.css
+++ b/9_new_year_countdown/style.css
@@ -37,8 +37,12 @@ body * {
 }
 
 h1 {
-  font-size: 60px;
+  font-size: 50px;
   margin: -80px 0 40px;
+}
+
+h1 span {
+  color: 	#FFD2D2
 }
 
 .countdown {
@@ -57,11 +61,12 @@ h1 {
 
 .time h2 {
   margin: 0 0 5px;
+  color: #ADADAD
 }
 
 @media (max-width: 500px) {
   h1 {
-    font-size: 45px;
+    font-size: 25px;
   }
 
   .time {
@@ -69,11 +74,11 @@ h1 {
   }
 
   .time h2 {
-    font-size: 12px;
+    font-size: 10px;
     margin: 0;
   }
 
   .time small {
-    font-size: 10px;
+    font-size: 8px;
   }
 }
